--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ backend/*.db
 backend/SPICE/tools/*
 backend/SPICE/kernels/**/*.bsp
 backend/SPICE/kernels/**/*.tls
+backend/SPICE/kernels/**/*.tpc
+backend/SPICE/kernels/**/*.bpc
+backend/SPICE/kernels/cumulative_metakernel.tm
 backend/__pycache__/
 !backend/SPICE/tools/README_tools.md
