--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ backend/SPICE/kernels/**/*.bsp
 backend/SPICE/kernels/**/*.tls
 backend/SPICE/kernels/**/*.tpc
 backend/SPICE/kernels/**/*.bpc
+backend/SPICE/kernels/**/*.tf
 backend/SPICE/kernels/cumulative_metakernel.tm
 backend/__pycache__/
 !backend/SPICE/tools/README_tools.md
