--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -13,7 +13,7 @@ RUN cd SPICE/kernels && mkdir default && mkdir user_uploaded
 RUN wget https://naif.jpl.nasa.gov/pub/naif/generic_kernels/lsk/latest_leapseconds.tls https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/planets/de435.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/satellites/jup310.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/satellites/mar097.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/satellites/nep081.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/satellites/plu055.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/satellites/sat427.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/asteroids/codes_300ast_20100725.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/satellites/ura111.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/pck/pck00010.tpc -P /Aether/SPICE/kernels/default
 # TODO -- merge the line below with the line above
 # RUN wget https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/comets/c2013a1_s105_merged.bsp https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/asteroids/codes_300ast_20100725.tf -P /Aether/SPICE/kernels/default
-RUN wget https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/asteroids/codes_300ast_20100725.tf -P /Aether/SPICE/kernels/default
+RUN wget https://naif.jpl.nasa.gov/pub/naif/generic_kernels/spk/asteroids/codes_300ast_20100725.tf https://naif.jpl.nasa.gov/pub/naif/generic_kernels/pck/gm_de431.tpc -P /Aether/SPICE/kernels/default
 RUN wget http://naif.jpl.nasa.gov/pub/naif/utilities/PC_Linux_64bit/brief -P /Aether/SPICE/tools
 RUN cd SPICE/tools && chmod a+x brief
 COPY aether-rest-server.py SPKParser.py MetakernelWriter.py AetherBodies.py ./
